--- a/src/UI/AboutUsWindow.form
+++ b/src/UI/AboutUsWindow.form
@@ -83,7 +83,7 @@
               <Font name="Leelawadee UI" size="12" style="0"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="Bintang Veterinary Clinic and Boarding (BVCB) is a &#xa;growing provider of veterinary care for both domestic and exotic pets.&#xa;&#xa;This system is written in Java. Thanks for using the system.  &#xa;"/>
+            <Property name="text" type="java.lang.String" value="Bintang Veterinary Clinic and Boarding (BVCB) is a &#xa;growing provider of veterinary care for both domestic and exotic pets.&#xa;&#xa;This system is written in Java. Thanks for using the system.  &#xa;&#xa;&#xa;&#xa;&#xa;&#xa;&#xa;Version 1.0.430&#xa;"/>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
         </Component>
